Fixed frontend spaceCenter alignment on mobile

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -55,8 +55,9 @@ input, button {
     padding: 10px;
 }
 .spaceCenter {
-    margin-left: 30vw;
-    margin-right: 30vw;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: max-content;
     width: 40vw;
     border-left: 5px solid rgb(48, 48, 48);
     border-right: 5px solid rgb(48, 48, 48);
